--- a/report/project_report.Rmd
+++ b/report/project_report.Rmd
@@ -51,14 +51,20 @@ library(grid)
 ```
 
 # Data
-The original dataset had 49 total attributes, including attributes related to traffic, location, weather, points of interest, and period of day.  Pre-processing the data set was necessary to allow us to focus on the variables and observations of real relevance to our aim.    
+The original dataset had 49 total attributes, including attributes related to traffic, location, weather, points of interest, and period of day.  Pre-processing the data set was necessary to allow us to focus on the variables and observations of real relevance to our aim. Although we started out with 48 dependent variables and one outcome variable, there were several reasons for removing most of the attributes, including:  
 
-For our purposes, we removed most location attributes. After aggregating the County variable into urban and rural factor levels, it was apparent that about 95% of the accident data was derived from urban areas. Therefore this information was not useful for prediction. We also chose to remove Wind Chill and Precipitation since they had around 60% missingess. Additionally, most of the points of interest variables had very low variability across observations, so we chose to only keep Crossing and Traffic Signal.The analysis dataset contains 119,279 traffic accidents from North Carolina between the years 2016 and 2019.
+1. The attribute had at least 60% missingness.
+    + Wind Chill and Precipitation
+2. The attribute had very low or no variability across the observations.  
+    + after aggregating the County variable into urban and rural factor levels, it was apparent that about 95% of the accident data was derived from urban areas, therefore variables such as County, Zip-Code, and City were not of use 
+    + most of the points of interest variables except Crossing and Traffic Signal
+3. The attribute was relevant for spatial purposes (i.e. latitude and longitude), which we do not aim to study at this time.
 
-In terms of traffic incidents, rows missing all weather variables were removed. Additionally, the analysis data were split up into training data (pre-2019) and testing data (2019) as mentioned previously. The final training dataset has 75,887 observations and the testing has 43,392 observations.
+Therefore this information was not useful for prediction.
+
+In terms of traffic incidents, rows missing all weather variables were removed. After pre-processing, the analysis dataset contains 119,279 traffic accidents from North Carolina between the years 2016 and 2019 with 12 attributes and one outcome variable. Additionally, the analysis data were split up into training data (pre-2019) and testing data (2019) as mentioned previously. The final training dataset has 75,887 observations and the testing has 43,392 observations.
   
-  
-The variables selected for analysis, and some accompany exploratory plots are as follows: 
+The variables selected for analysis, and some accompanying exploratory plots are as follows: 
 
 ### Outcome:
 1. Severity:  severity of the accident in terms of the impact on traffic, which is an integer from 1 to 3 with increasing impact. This is an ordinal variable and the outcome of interest.  
@@ -69,8 +75,6 @@ It should be noted that the data set sources are rather vague on the definition 
 
 ### Predictors:
 
-*Note, my comments on the variables will be removed once we finalize the filtered dataset
-  
 **Location/Time** 
 
 1. Source: categorical, API that reported accident (MapQuest, Bing, MapQuest-Bing)
@@ -86,7 +90,6 @@ It should be noted that the data set sources are rather vague on the definition 
 8. Pressure: numeric air pressure, in inches  
 9. Visibility: numeric, in miles  
 10. Wind Speed: numeric, in mph 
-11. Weather Condition -- aggregate? (53 factors)  (not using right now)
 
 ```{r fig.width=8,echo=FALSE}
 grid.raster(readPNG("weather_boxplots.png"))
@@ -94,8 +97,8 @@ grid.raster(readPNG("weather_boxplots.png"))
   
 **Points of Interest**  
 
-12. Crossing: TRUE/FALSE, presence of a crossing nearby for pedestrians, cyclists, etc. 
-13. Traffic_Signal: TRUE/FALSE, presence of a traffic signal nearby on an intersection 
+11. Crossing: TRUE/FALSE, presence of a crossing nearby for pedestrians, cyclists, etc. 
+12. Traffic_Signal: TRUE/FALSE, presence of a traffic signal nearby on an intersection 
 
 ```{r fig.width=6,echo=FALSE}
 grid.raster(readPNG("crossing.png"))
