--- a/report/project_report.Rmd
+++ b/report/project_report.Rmd
@@ -6,6 +6,7 @@ output:
   html_document:
     df_print: paged
     toc: yes
+    toc_float: true
 ---
 
 ```{r setup, include=FALSE}
@@ -196,30 +197,39 @@ The gradient is
   }
 \]   
 
-## Proportional Odds Model with Penalty  
+### Proportional Odds Model with Penalty  
 Although we only listed 13 predictors of interest, the Weather_Condition variable contains 53 levels alone, which can be problematic to fit especially if interactions are of interest. Meanwhile, aggregating the levels can be very subjective. To solve this problem, we integrate a <---insert the kind of penalty---> penalty term into the ordinary proportional odds model.
 
 <---formulas for penalty and the likelihood function and gradient---->
 
 
-## Variable Selection
+### Variable Selection
 
   
 ## Random Forest
 We implement the random forest method directly from the `caret` package in R for a comparison to the proportional odds model.  We use 5-fold Cross Validation on the training data to build the model. Additionally, a tuning grid is used to tune the parameter `mtry`, which defines the number of variables randomly collected to be sampled at each split time. The tuning grid used explored `mtry` values $1$, $2$, and $3$. 
 
+### Ordinal Forest
 It should be noted however, that the typical random forest classifier does not account for the fact that the classes are ordinal (i.e. class 1 is "closer" to class 2 than class 3). Therefore, it is of interest to explore a machine learning algorithm that can account for this. The R package `ordinalForest` does just that. We use the model with default hyperparameters on our data and compare to the traditional random forest and the proportional odds model.
 
+### Downsampling
 Since the levels of severity are not balanced, we also down-sampled the less severe outcomes to see if the predicted model improves in terms of accuracy and/or computation burden. We randomly sampled 1081 incidents from severity-1 incidents and 1081 incidents from severity-2 incidents, so that the three levels are balanced.
 
 ## Evaluation and Comparison of Models
-One way to evaluate the performance of our methods is to test the accuracy of the models on the test set. To do this, the fraction of the correctly classified observations is divided by the total number of observations in the test set. 
 
-Another method to evaluate categorical models is to use Cohen's Kappa, which scales the accuracy to account for the predictions that are correct by guessing. 
+In order to compare the performance of the different models built, we will use the attributes from the observations in our test set to predict their severity classification for each model. Then we can quantitatively compare which observations were correctly classified.
 
-We can also compare the computational time it takes to build each model. This is important when working with large datasets. 
+One way to do this is to measure the **accuracy** of the models on the test set. To do this, the fraction of the correctly classified observations is divided by the total number of observations in the test set. 
+
+Another method to evaluate categorical models is to use **Cohen's Kappa**, which scales the accuracy to account for the predictions that are correct by guessing. We predict this will be more useful to us than the accuracy metric, since most of our data points come from Severity level 1 and accuracy could be very high simply by guessing all observations are in this class.
+
+We can also compare the computational time it takes to build each model, called the **time to train**. This is important when working with large datasets. 
+
+And finally, for a more visual comparison, we can look at the **Confusion Matrix** for the test set. This will be a 3 x 3 matrix in our case which tells us how many observations were predicted as class 1, 2, or 3 when their true classification is 1, 2, or 3.
 
 # Results 
+
+Note that not all of the code is run in this markdown document due to compiling time.
 
 ## Proportional Odds Model
 ```{r}
@@ -228,9 +238,85 @@ We can also compare the computational time it takes to build each model. This is
 ```
 ## Random Forest
 
+RF Full Training Set
+
+```{r, eval = FALSE}
+#5-fold cross-validation
+cv_5 = trainControl(method = "cv", number = 5)
+
+#Tuning parameter
+rf_grid = expand.grid(mtry = 1:3)
+
+#Train model 
+set.seed(3)
+start = Sys.time()
+rf_mod_red = train(
+  Severity_c ~ Side + `Temperature(F)` + `Humidity(%)` + `Pressure(in)` + 
+               `Visibility(mi)` + `Wind_Speed(mph)` + Crossing + Traffic_Signal +
+               Sunrise_Sunset + weekday + interstate, 
+  data = trn_data, 
+  method = "rf",
+  trControl = cv_5,
+  tuneGrid = rf_grid
+)
+end = Sys.time()
+print(end - start)
+
+#Create plot of variable importance 
+varImpPlot(rf_mod_red$finalModel)
+
+#Obtain confusion matrix, accuracy, and kappa 
+confusionMatrix(predict(rf_mod_red, newdata = tst_data), tst_data$Severity_c)
+```
+
+OF Full Training Data 
+
+```{r, eval = FALSE}
+#Prepare data
+datatrain = trn_data%>% dplyr::select(Source, Side, `Temperature(F)`, `Humidity(%)`, `Pressure(in)`,
+                                `Visibility(mi)`, `Wind_Speed(mph)`, Crossing, Traffic_Signal,
+                                 Sunrise_Sunset, weekday, interstate, Severity_c)
+datatest = tst_data %>% dplyr::select(Source, Side, `Temperature(F)`, `Humidity(%)`, `Pressure(in)`,
+                                `Visibility(mi)`, `Wind_Speed(mph)`, Crossing, Traffic_Signal,
+                                Sunrise_Sunset, weekday, interstate, Severity_c)
+
+#Train Model 
+set.seed(13847)
+start = Sys.time()
+ordforest <- ordfor(depvar = "Severity_c", data = datatrain)
+sort(ordforest$varimp, decreasing = TRUE)
+end = Sys.time()
+print(end - start)
+
+#Predict 
+preds <- predict(ordforest, newdata = datatest)
+
+#Obtain confusion matrix, accuracy, and kappa 
+confusionMatrix(preds$ypred, datatest$Severity_c)
+```
+
+Downsampling Code 
+
+```{r, eval = FALSE}
+set.seed(12984)
+downsample.trn <- trn_data[c(which(trn_data$Severity_c == 3),
+                             sample(which(trn_data$Severity_c == 1), 1081), 
+                             sample(which(trn_data$Severity_c == 2), 1081)),]
+```
+
 ## Method Comparison 
 
-ordinalForest took about 1.5 hours. 
+The table below compares the 6 models built with all 12 predictors. We can see that the accuracy and Cohen's Kappa values are very comparable between the four models built with the entire Training Dataset. These metrics are slightly worse for the down sampled models. This is likely because of the immense loss of information when we apply a strict down sampling approach to our very imbalanced data. The most interesting result here is the difference in time to train between the models. 
+
+```{r, echo = FALSE}
+# create table from powerpoint 
+table_df <- data.frame(Method = c("Proportional Odds", "OrdinalNet", "Random Forest", "Ordinal Forest", "RF Down Sample", "OF Down Sample"), 
+                       Training_Set_Size = c(rep(75887,4), rep(3243, 2)), 
+                       Accuracy = c(0.903, .903, .904, .904, 0.887, 0.886), 
+                       Kappa = c(0.659, 0.664, 0.6696, 0.675, 0.661, 0.660), 
+                       Time = c("1.7 minutes", "5.4  minutes", "11.5 minutes", "1.5 hours", "24 seconds", "7 minutes"))
+knitr::kable(table_df, align = 'ccccc', caption = "Model Performance")
+```
 
 # Discussion 
 
@@ -240,6 +326,8 @@ comparison of POM and RF
   -applicability
 
 ## Limitations 
+
+## Future Directions 
 
 # Data Source 
 The Car Accidents data set for North Carolina and the derived training and test data sets are provided in our project repository. Due to the size, we do not include the original nation-wide car accidents data set in our repository, but interested reader can find the dataset and related information on https://www.kaggle.com/sobhanmoosavi/us-accidents and https://smoosavi.org/datasets/us_accidents.  
