--- a/report/project_report.Rmd
+++ b/report/project_report.Rmd
@@ -1,7 +1,7 @@
 ---
-title: 'BIOS 735 Final Project: Car Accident Severity'
+title: 'BIOS 735 Final Project: US Car Accidents and Traffic Severity'
 author: "Marissa Ashner, Yen Chang, Marco Chen, Yi Tang Chen, Weifang Liu, Joyce Yan"
-date: "4/23/2020"
+date: "4/27/2020"
 output:
   html_document:
     df_print: paged
@@ -12,6 +12,8 @@ output:
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
+library(png)
+library(grid)
 ```
 
 # Introduction 
@@ -44,11 +46,9 @@ Our R package `group3project` contains the functions needed to fit a proportiona
     + Training Data
     + Full NC Data
 
-
-```{r}
-## load package here
-library(png)
-library(grid)
+```{r, message = FALSE}
+## load our package here
+devtools::load_all("../group3project")
 ```
 
 # Data
@@ -215,6 +215,7 @@ It should be noted however, that the typical random forest classifier does not a
 ### Downsampling
 Since the levels of severity are not balanced, we also down-sampled the less severe outcomes to see if the predicted model improves in terms of accuracy and/or computation burden. We randomly sampled 1081 incidents from severity-1 incidents and 1081 incidents from severity-2 incidents, so that the three levels are balanced.
 
+
 ## Evaluation and Comparison of Models
 
 In order to compare the performance of the different models built, we will use the attributes from the observations in our test set to predict their severity classification for each model. Then we can quantitatively compare which observations were correctly classified.
@@ -236,6 +237,7 @@ Note that not all of the code is run in this markdown document due to compiling 
 
 
 ```
+
 ## Random Forest
 
 RF Full Training Set
@@ -251,7 +253,7 @@ rf_grid = expand.grid(mtry = 1:3)
 set.seed(3)
 start = Sys.time()
 rf_mod_red = train(
-  Severity_c ~ Side + `Temperature(F)` + `Humidity(%)` + `Pressure(in)` + 
+  Severity_c ~ Source, Side + `Temperature(F)` + `Humidity(%)` + `Pressure(in)` + 
                `Visibility(mi)` + `Wind_Speed(mph)` + Crossing + Traffic_Signal +
                Sunrise_Sunset + weekday + interstate, 
   data = trn_data, 
@@ -304,7 +306,7 @@ downsample.trn <- trn_data[c(which(trn_data$Severity_c == 3),
                              sample(which(trn_data$Severity_c == 2), 1081)),]
 ```
 
-## Method Comparison 
+## Full Model Method Comparison 
 
 The table below compares the 6 models built with all 12 predictors. We can see that the accuracy and Cohen's Kappa values are very comparable between the four models built with the entire Training Dataset. These metrics are slightly worse for the down sampled models. This is likely because of the immense loss of information when we apply a strict down sampling approach to our very imbalanced data. The most interesting result here is the difference in time to train between the models. 
 
@@ -317,6 +319,103 @@ table_df <- data.frame(Method = c("Proportional Odds", "OrdinalNet", "Random For
                        Time = c("1.7 minutes", "5.4  minutes", "11.5 minutes", "1.5 hours", "24 seconds", "7 minutes"))
 knitr::kable(table_df, align = 'ccccc', caption = "Model Performance")
 ```
+
+## Source Specific Modeling 
+Due to the results from the full dataset, it is clear that the `Source` Predictor is important in predicting the severity of car accidents on traffic delays in our dataset. It is not practical to use a prediction model with a variable such as API data source as an important predictor in the model. The different sources should ideally fit seamlessly together, but instead we have heterogeneity among the MapQuest and Bing derived data. Given more time, it might be of interest to reach out to these API sources to gather more information about their respective definitions of severity so we could try to create a more harmonious output. In the meantime, we build three new Random Forest models to investigate this issue further. 
+
+First, we build a model on the full training dataset, but removing Source from the set of predictors. 
+
+```{r, eval = FALSE}
+#5-fold cross-validation
+cv_5 = trainControl(method = "cv", number = 5)
+
+#Tuning parameter
+rf_grid = expand.grid(mtry = 1:3)
+
+#Train model 
+set.seed(3)
+start = Sys.time()
+rf_mod_red = train(
+  Severity_c ~ Side + `Temperature(F)` + `Humidity(%)` + `Pressure(in)` + 
+               `Visibility(mi)` + `Wind_Speed(mph)` + Crossing + Traffic_Signal +
+               Sunrise_Sunset + weekday + interstate, 
+  data = trn_data, 
+  method = "rf",
+  trControl = cv_5,
+  tuneGrid = rf_grid
+)
+end = Sys.time()
+print(end - start)
+
+#Create plot of variable importance 
+varImpPlot(rf_mod_red$finalModel)
+
+#Obtain confusion matrix, accuracy, and kappa 
+confusionMatrix(predict(rf_mod_red, newdata = tst_data), tst_data$Severity_c)
+```
+
+Second, we subset the processed training and testing data into two groups each: one with `Source = MapQuest` and one with `Source = Bing`. The few observations that were obtained from both APIs were dropped. Additionally, since only 8 observations from MapQuest had severity 3, those observations were dropped and the MapQuest model reduced to a two level outcome model.
+
+```{r, eval = FALSE}
+bing.trn <- trn_data[c(which(trn_data$Source == "Bing")), ]
+bing.test <- tst_data %>% dplyr::filter(Source == "Bing")
+table(bing.trn$Severity_c)
+
+mq.trn <- trn_data %>% dplyr::filter(Source == "MapQuest" & !(Severity_c == "3"))
+mq.test <- tst_data %>% dplyr::filter(Source == "MapQuest" & !(Severity_c == "3"))
+mq.test$Severity_c <- droplevels(mq.test$Severity_c)
+mq.trn$Severity_c <- droplevels(mq.trn$Severity_c)
+table(mq.trn$Severity_c)
+```
+
+```{r, eval = FALSE}
+set.seed(3)
+start = Sys.time()
+rf_mod_red = train(
+  Severity_c ~ Side + `Temperature(F)` + `Humidity(%)` + `Pressure(in)` + 
+    `Visibility(mi)` + `Wind_Speed(mph)` + Crossing + Traffic_Signal +
+    Sunrise_Sunset + weekday + interstate, 
+  data = bing.trn, 
+  method = "rf",
+  trControl = cv_5,
+  tuneGrid = rf_grid
+)
+end = Sys.time()
+print(end - start)
+
+varImpPlot(rf_mod_red$finalModel)
+
+# Confusion Matrix, has a lot of metrics including Kappa
+confusionMatrix(predict(rf_mod_red, newdata = bing.test), bing.test$Severity_c)
+```
+
+```{r, eval = FALSE}
+
+set.seed(3)
+start = Sys.time()
+rf_mod_red = train(
+  Severity_c ~ Side + `Temperature(F)` + `Humidity(%)` + `Pressure(in)` + 
+    `Visibility(mi)` + `Wind_Speed(mph)` + Crossing + Traffic_Signal +
+    Sunrise_Sunset + weekday + interstate, 
+  data = mq.trn, 
+  method = "rf",
+  trControl = cv_5,
+  tuneGrid = rf_grid
+)
+end = Sys.time()
+print(end - start)
+
+rf_mod_red$results
+rf_mod_red$bestTune
+varImp(rf_mod_red)
+varImpPlot(rf_mod_red$finalModel)
+#Obtain test accuracy
+calc_acc(actual = tst_data$Severity_c, predicted = predict(rf_mod_red, newdata = tst_data))
+
+# Confusion Matrix, has a lot of metrics including Kappa
+confusionMatrix(predict(rf_mod_red, newdata = mq.test), mq.test$Severity_c)
+```
+
 
 # Discussion 
 
